--- a/2021I_GBI6_ExamenFinal.Rmd
+++ b/2021I_GBI6_ExamenFinal.Rmd
@@ -14,7 +14,7 @@ output:
       smooth_scroll: yes
 ---
 
-![](./img/ikiam.png)
+
 
 **Bienvenidos al examen final de GBI6 - Bioinformática.**
 
@@ -90,6 +90,8 @@ df <- read.csv("mRNA_expr.csv")
 
 ```{r funcion_long}
 long_df <- function(df) {
+  library(tidyr)
+  library(dplyr)
   df$dataset <- as.factor(df$dataset)
   df_l <- gather(df, gen, expresion_level, GATA3, PTEN, XBP1, ESR1, MUC1, FN1, GAPDH, factor_key=TRUE)
   df_l2 <- select(df_l, -bcr_patient_barcode)
@@ -103,14 +105,17 @@ long_df <- function(df) {
 ### [1 PUNTO] Genere la data ```df_long``` utilizandola función ```long_df```. 
 La tabla resultante tendrá tres columnas: ```dataset, gen, expresion_level```.  
 ```{r df_long}
-
 df_long <- long_df(df)
-
 prueba <- df_long %>% group_by(gen)
 ```
 
 ### [0.5 PUNTOS] 1.5 A partir de la data ```df_long```, genere un **Descriptive table** (librería ```sjPlot```) y guárdelo en el subdirectorio "result"  con el nombre **mRNA_expr_summary.doc** (previamente debe seleccionar las celdas adecuadas con funciones de la librería ```dplyr``` en conjunto con el operador ```%>%```). 
 ```{r desc_table}
+
+library(sjPlot)
+library(sjmisc)
+
+
 cancer_mama <- prueba %>% group_by(gen) %>% mutate(row = row_number()) %>%
   tidyr::pivot_wider(names_from = gen, values_from = expresion_level) %>%
   select(-row)
@@ -118,14 +123,14 @@ cancer_mama <- prueba %>% group_by(gen) %>% mutate(row = row_number()) %>%
 descr(cancer_mama) %>% tab_df(title = "Estadistica descriptiva del cancer de MAMA y su nivel de expresion de los diferentes genes",
                               file = "mRNA_expr_summary.doc") 
 
-#stat_summary me puede servir
+
 ```
 
 ### [0.5 PUNTOS] 1.6 Interprete los resultados de la tabla resultante de la sección 1.5. 
 
 
 ```{tex}
-# Escriba aquí su interpretación 
+De acuerdo a los resultados obtenidos puede evidenciar una tabla descriptiva en la cual se puede apreciar valores de desviacion estandar, la moda, la media. Ademas, de que esta organizado por categorias  en base a los niveles de expresion de genes. 
 
 ```
 
@@ -138,7 +143,8 @@ Para esta pregunta tiene que utilizar la data ```df_long```.
 ### [1 PUNTO] 2.1 Cree la funcion ```tcga_boxplots``` para visualizar boxplots y jitterplots. El único parámetro de la función es ```dataset```. La función debe crear un boxplot de los niveles de expresión para cada gen.
 
 ```{r}
-# Escriba el código para crear la función tcga_boxplots
+library(ggplot2)
+
 tcga_boxplots <- function(dataset) {
   library(ggplot2)
   return(ggplot (dataset, aes(x = gen, y = expresion_level, col = gen)) + labs(x="Gen", y = "Expression level")
@@ -149,7 +155,6 @@ tcga_boxplots(df_long)
 
 ### [0.5 PUNTOS] 2.2 Utilizando la función ```lapply()``` genera la lista ```cancertype_boxplots``` con las gráficas para cada tipo de cancer (cada tipo de dataset). 
 ```{r list_boxplots}
-# Escriba el código para generar la lista. 
 cancertype <- list(
   BRCA <- filter(df_long, dataset == "BRCA"),
   OV <- filter(df_long, dataset == "OV"),
@@ -161,15 +166,13 @@ cancertype <- list(
 
 cancertype_boxplots = lapply(cancertype, function(x) {ggplot(x, aes(dataset, expresion_level, col = dataset)) +
     geom_boxplot() + theme(legend.position='none') + labs(x = "", y = "Expression level")})
-    
 
 ```
 
 ### [0.5 PUNTOS] 2.3 Guarde en el subdirectorio ```result``` el tercer plot de la lista ```cancertype_boxplots``` con el nombre ```boxplot3.png```. La definición de a figura debe ser de 300dpi. 
 ```{r boxplot3}
-# Escriba el código para guardar la tercera figura de la lista. 
 cancertype_boxplots[3]
-ggsave("boxplot3.png", width = 6, height = 8, dpi = 300)
+ggsave("boxplot3.png", width = 6, height = 8, dpi = 300) 
 
 ```
 
@@ -177,8 +180,8 @@ ggsave("boxplot3.png", width = 6, height = 8, dpi = 300)
 ### [1 PUNTO] 2.4 Escriba la función ```reg_gen_expression```, con el parámetro ```gen```. En este caso la función visualizará una gráfica de nube de puntos (geom_point) y una regresión por tipo de "dataset". La gráfica será de comparación de gen1 con gen2; por ejemplo en el eje "x" ```GATA3``` y en el eje "y"" ```FN1```.  
 
 ```{r reg_gen_exp}
-# Escriba aquí su función reg_gen_expression
-dataset_type <- list(
+
+ dataset_type <- list(
     BRCA <- filter(df_long, dataset == "BRCA"),
     OV <- filter(df_long, dataset == "OV"),
     LUSC <- filter(df_long, dataset == "LUSC"),
@@ -220,7 +223,6 @@ plots_cancer <- list (
 
 ### [0.5 PUNTOS] 2.5. Utilizando la función ```lapply()``` genera la lista ```reg_genplots``` con las gráficas para cada par de genes posibles. Recuerde que tiene 7 tipos de genes, se debe tener todas las combinaciones posibles por pares de genes (combinatoria sin repetición).
 ```{r list_regplots}
-# Escriba el código para generar la lista. 
 reg_gen_expression <- function (gen) {
   if (gen == "GATA3"){
     total <- list (
@@ -328,24 +330,27 @@ reg_gen_expression <- function (gen) {
           geom_point() + geom_smooth(method='lm', formula= y~x)}))
   }
 }
-
+   
 ```
 
 
 ### [0.5 PUNTOS] 2.6. Guarde en el subdirectorio ```result``` el onceavo plot de la lista ```reg_genplots``` con el nombre ```regresion11.pdf```. La definición de a figura debe ser de 300dpi. 
 ```{r reg11}
-# Escriba el código para guardar el onceavo plot. 
-graficos_cancer <- reg_gen_expression("GATA3")
+graficos_cancer <- reg_gen_expression("GATA3") 
+
 graficos_cancer[[5]][[2]]
 
 ggsave("regresion11.pdf", width = 6, height = 8, dpi = 300)
+
 ```
 
 
 ### [1 PUNTO] 2.7. Interprete los resultados de las figuras ```boxplot3.png``` y ```regresion11.pdf```.
 
 ```{tex}
-# Esciba aquí su intepretación
+En el boxplot3 se puede evidenciar todos los datos de df en donde cada gen esta distribuido por los cuartiles, la cual los datos de genes de GATA 3 poseen valores mas equilibrados que los demas tipos de genes, ya que su valor de 0.7 esta proximadamente cerca del 0. Ademas se puede analizar que no existen valores atipicos. 
+
+Mientras que en la regresion11 se puede apreciar la dispercion de los genes de GATA3 y FN1, por lo que cada unos de los puntos hace referencia a las concetracion de canceres que se aproducido por estos 2 tipos de genes. 
 
 ```
 
